--- a/templates/roll-tracker.hbs
+++ b/templates/roll-tracker.hbs
@@ -1,21 +1,16 @@
-{{!-- {{log 'Input data' this}} --}}
 <form>
     <div class="roll-tracker-form flexcol" data-userId="{{userId}}">
         <h1 class="roll-tracker-form-heading">{{username}}</h1>
         <ul class="roll-tracker-form flexcol">
             <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.mean"}}: </span>{{stats.mean}}</li>
             <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.median"}}: </span>{{stats.median}}</li>
-            <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.mode"}} ({{stats.modeCount}}
-            {{#if (isOne stats.modeCount)}} instance {{else}} instances {{/if}} {{#if (isTie stats.mode)}} each {{/if}}): </span>{{stats.mode}}</li>
-            <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.autoSuccess"}}: </span>{{stats.autoSuccess}}</li>
-            <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.autoFailure"}}: </span>{{stats.autoFailure}}</li>
-            {{#if stats.lastRoll}}
+            <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.mode"}}: </span>{{stats.mode}} ({{stats.modeCount}}/{{stats.modeCountPercentage}}%)</li>
+            <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.autoSuccess"}}: </span>{{stats.autoSuccess}} ({{stats.autoSuccessPercentage}}%)</li>
+            <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.autoFailure"}}: </span>{{stats.autoFailure}} ({{stats.autoFailurePercentage}}%)</li>
             <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.lastRoll"}}: </span>{{stats.lastRoll}}</li>
-            {{/if}}
             <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.count"}}: </span>{{stats.count}}</li>
         </ul>
         <button type="button" class="roll-tracker-form-button-delete" data-action="clear"><i class="fas fa-times"></i>{{localize "ROLL-TRACKER.form-button.clear"}}</button>
         <button type="button" class="roll-tracker-form-button-print" data-action="print"><i class="fas fa-eye"></i>{{localize "ROLL-TRACKER.form-button.print"}}</button>
-
     </div>
 </form>
