--- a/templates/roll-tracker-chat.hbs
+++ b/templates/roll-tracker-chat.hbs
@@ -1,15 +1,25 @@
 <form>
     <div class="roll-tracker-form flexcol" data-userId="{{userId}}">
-        <h1 class="roll-tracker-form-heading">{{username}}</h1>
-       <ul class="roll-tracker-form flexcol">
+        <h1 class="roll-tracker-form-heading">D100 Stats</h1>
+        <ul class="roll-tracker-form flexcol">
             <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.mean"}}: </span>{{stats.mean}}</li>
             <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.median"}}: </span>{{stats.median}}</li>
-            <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.mode"}} ({{stats.modeCount}}
-            {{#if (isOne stats.modeCount)}}{{localize "ROLL-TRACKER.form-label.instance"}}{{else}} {{localize "ROLL-TRACKER.form-label.instances"}}{{/if}}{{#if (isTie stats.mode)}} {{localize "ROLL-TRACKER.form-label.each"}}{{/if}}): </span>{{stats.mode}}</li>
-            <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.autoSuccess"}}: </span>{{stats.autoSuccess}}</li>
-            <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.autoFailure"}}: </span>{{stats.autoFailure}}</li>
-      <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.lastRoll"}}: </span>{{stats.lastRoll}}</li>
+            <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.mode"}}: </span>{{stats.mode}} ({{stats.modeCount}}/{{stats.modeCountPercentage}}%)</li>
+            <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.lastRoll"}}: </span>{{stats.lastRoll}}</li>
             <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.count"}}: </span>{{stats.count}}</li>
+        </ul>
+        <h1 class="roll-tracker-form-heading">WFRP Stats</h1>
+        <ul class="roll-tracker-form flexcol">
+            <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.autoSuccess"}}: </span>{{stats.autoSuccess}} ({{stats.autoSuccessPercentage}}%)</li>
+            <li><span class="roll-tracker-form stat">{{localize "ROLL-TRACKER.form-label.autoFailure"}}: </span>{{stats.autoFailure}} ({{stats.autoFailurePercentage}}%)</li>
+            <li><span class="roll-tracker-form stat">Criticals: </span>{{stats.criticals}} ({{stats.criticalsPercentage}}%)</li>
+            <li><span class="roll-tracker-form stat">Fumbles: </span>{{stats.fumbles}} ({{stats.fumblesPercentage}}%)</li>
+        </ul>
+        <h1 class="roll-tracker-form-heading">Fortune & Dark Deals</h1>
+        <ul class="roll-tracker-form flexcol">
+            <li><span class="roll-tracker-form stat">Fortune: </span>{{stats.autoSuccess}}</li>
+            <li><span class="roll-tracker-form stat">Fortune (+1 SL): </span>{{stats.autoFailure}}</li>
+            <li><span class="roll-tracker-form stat">Dark Deal: </span></li>
         </ul>
     </div>
 </form>
