--- a/templates/roll-tracker.hbs
+++ b/templates/roll-tracker.hbs
@@ -18,7 +18,7 @@
         <h1 class="roll-tracker-form-heading">Fortune & Dark Deals</h1>
         <ul class="roll-tracker-form flexcol">
             <li><span class="roll-tracker-form stat">Fortune Reroll: </span>{{stats.fortune}}</li>
-            <li><span class="roll-tracker-form stat">Fortune +1 SL: </span>{{stats.fortuneSL}}</li>
+            <li><span class="roll-tracker-form stat">Fortune (+1 SL): </span>{{stats.fortuneSL}}</li>
             <li><span class="roll-tracker-form stat">Dark Deal: </span>{{stats.darkDeal}}</li>
         </ul>
         <button type="button" class="roll-tracker-form-button-delete" data-action="clear"><i class="fas fa-times"></i>{{localize "ROLL-TRACKER.form-button.clear"}}</button>
